# rad-embeddings

./: .gitignore  LICENSE  README.md  plot.py  pyproject.toml  requirements.txt  test.py  train.py
rad_embeddings/: __init__.py  encoder.py  ppo.py  train.py  train_encoders.sh  wrappers.py
rad_embeddings/scripts/: flann26.py
rad_embeddings/storage/: encoder_params_max_size_10_n_tokens_10_seed_0.msgpack  encoder_params_max_size_10_n_tokens_10_seed_0_binary_reward_True_gamma_0.01.msgpack  encoder_params_max_size_10_n_tokens_10_seed_0_binary_reward_True_gamma_0.1.msgpack  encoder_params_max_size_10_n_tokens_10_seed_0_binary_reward_True_gamma_0.5.msgpack  encoder_params_max_size_10_n_tokens_10_seed_0_binary_reward_True_gamma_0.9.msgpack  encoder_params_max_size_10_n_tokens_10_seed_0_binary_reward_True_gamma_0.99.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_False.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_True_gamma_0.01.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_True_gamma_0.1.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_True_gamma_0.5.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_True_gamma_0.9.msgpack  encoder_params_max_size_10_n_tokens_10_seed_1_binary_reward_True_gamma_0.99.msgpack  encoder_params_max_size_10_n_tokens_10_seed_2.msgpack  encoder_params_max_size_10_n_tokens_10_seed_2_binary_reward_True_gamma_0.01.msgpack  encoder_params_max_size_10_n_tokens_10_seed_2_binary_reward_True_gamma_0.1.msgpack  log_0.csv  log_1.csv  log_2.csv  log_3.csv  (+44 more)
