[project]
name = "rad-embeddings"
version = "0.2.0"
description = "Python library for RAD Embeddings, provably correct latent DFA representations."
authors = [
    { name = "Beyazit Yalcinkaya", email = "beyazit@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfa-gym>=0.2.0",
    "jraph>=0.0.6.dev0",
    "distrax==0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
