[project]
name = "rad-embeddings"
version = "0.2.5"
description = "Python library for RAD Embeddings, provably correct latent DFA representations."
authors = [
    { name = "Beyazit Yalcinkaya", email = "beyazit@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfax>=0.1.16",
    "dfa-gym>=0.2.18",
    "jraph>=0.0.6.dev0",
    "distrax==0.1.5",
    "wandb>=0.15.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
cuda = [
    "dfax[cuda]>=0.1.16",
    "dfa-gym[cuda]>=0.2.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
